[gd_scene load_steps=8 format=3 uid="uid://d3s3uybrcuh1k"]

[ext_resource type="Script" path="res://Scripts/pages/album.gd" id="1_qxjmq"]
[ext_resource type="Texture2D" uid="uid://bmw6l2k81eycp" path="res://Assets/carta.png" id="2_e4818"]
[ext_resource type="Script" path="res://Scripts/components/card_display.gd" id="3_8xwq1"]

[sub_resource type="LabelSettings" id="LabelSettings_lutgg"]
line_spacing = -5.0
font_size = 9
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wj0ox"]
line_spacing = -5.0
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qxxii"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vppwt"]
size = Vector2(163, 210.185)

[node name="Album" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qxjmq")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00954861
anchor_top = 0.0679012
anchor_right = 0.679688
anchor_bottom = 0.850309
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
columns = 4

[node name="Complete" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.447917
anchor_top = 0.0169753
anchor_right = 0.618056
anchor_bottom = 0.095679
metadata/_edit_use_anchors_ = true

[node name="CardDisplay" type="TextureRect" parent="."]
custom_minimum_size = Vector2(186, 235)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.693576
anchor_top = 0.0679012
anchor_right = 0.935764
anchor_bottom = 0.641728
offset_left = 4.0
offset_top = 2.00002
offset_right = 4.0
offset_bottom = -13.84
scale = Vector2(1, 1.08)
mouse_filter = 2
texture = ExtResource("2_e4818")
expand_mode = 1
script = ExtResource("3_8xwq1")
draggable = false
is_slot = false
can_inspect = false
metadata/_edit_use_anchors_ = true

[node name="imagem" type="TextureRect" parent="CardDisplay"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152318
anchor_top = 0.223359
anchor_right = 0.84916
anchor_bottom = 0.578144
offset_top = 0.219429
offset_right = 3.05176e-05
offset_bottom = 0.219391
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Nome_da_carta" type="Label" parent="CardDisplay"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.172186
anchor_top = 0.046764
anchor_right = 0.821194
anchor_bottom = 0.157875
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Nome_da_carta"
label_settings = SubResource("LabelSettings_lutgg")
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 35
max_lines_visible = 3
metadata/_edit_use_anchors_ = true

[node name="Descrição_do_acontecimento" type="Label" parent="CardDisplay"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0927155
anchor_top = 0.580808
anchor_right = 0.880797
anchor_bottom = 0.833334
offset_top = 3.05176e-05
offset_bottom = 3.05176e-05
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Descrição"
label_settings = SubResource("LabelSettings_wj0ox")
autowrap_mode = 2
clip_text = true
max_lines_visible = 5
metadata/_edit_use_anchors_ = true

[node name="Ano" type="Label" parent="CardDisplay"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295699
anchor_top = 0.847236
anchor_right = 0.7561
anchor_bottom = 0.919347
offset_top = -0.0263977
offset_right = -1.52588e-05
offset_bottom = 0.0274658
text = "Ano"
label_settings = SubResource("LabelSettings_qxxii")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Carta" type="Area2D" parent="CardDisplay"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDisplay/Carta"]
position = Vector2(93.5001, 118.056)
shape = SubResource("RectangleShape2D_vppwt")

[node name="Tags" type="Label" parent="CardDisplay"]
visible = false
layout_mode = 0
offset_left = 42.0001
offset_top = 198.148
offset_right = 143.0
offset_bottom = 221.148
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "tags"

[node name="Voltar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0217014
anchor_top = 0.867284
anchor_right = 0.222222
anchor_bottom = 0.962963
text = "voltar
"
metadata/_edit_use_anchors_ = true

[node name="cardDica" type="Label" parent="."]
layout_mode = 0
offset_left = 805.0
offset_top = 440.0
offset_right = 1084.0
offset_bottom = 565.0
theme_override_font_sizes/font_size = 20
text = "Descrição"
autowrap_mode = 3
clip_text = true

[node name="resetAlb" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.710938
anchor_top = 0.882716
anchor_right = 0.932292
anchor_bottom = 0.96142
text = "Resetar progresso nesse album."
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="CardDisplay" to="CardDisplay" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CardDisplay" to="CardDisplay" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CardDisplay/Carta" to="CardDisplay" method="_on_carta_mouse_entered"]
[connection signal="mouse_exited" from="CardDisplay/Carta" to="CardDisplay" method="_on_carta_mouse_exited"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="resetAlb" to="." method="_on_reset_alb_pressed"]
